add linkedin login and back button (session)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="updated_just_now">Updated just now</string>
     <string name="share_article">Share Article</string>
 
-    <string name="the_guardian">Muhammad Ari Ramdhany</string>
+    <string name="headline">Headline</string>
 
     <!-- Strings for Section -->
     <string name="world">world</string>
